Fix header spacing when not logged in

--- a/app/stylesheets/screen.scss
+++ b/app/stylesheets/screen.scss
@@ -67,6 +67,7 @@ body {
       padding-right: 40px;
     }
     text-align: center;
+    min-height: 20px;
   }
   
   #user {
